--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_BASE_URL=https://share-it123.herokuapp.com
-MONGO_CONNECTION_URL=mongodb+srv://test:test@share-it.g8ovi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_CONNECTION_URL=
 
 SMTP_HOST=
 SMTP_PORT=587
